--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="src/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://kit.fontawesome.com/31ced76bc2.js" crossorigin="anonymous"></script>
-    
+    <script src="src/index.js" defer></script>
 </head>
 <body>
     <div class="rating-box">
